changes to readme